--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
    <section class="work">
     <div class="grid">
         <div class="card">
-            <div class="card_img"><img src="/img/web.jpg" width="320px" alt=""></div>
+            <div class="card_img"><img src="img/web.jpg" width="320px" alt=""></div>
             <div class="card_text">
                 <h3>Web Development</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam voluptates perferendis at placeat debitis laboriosam quibusdam exercitationem minima minus magni.</p>
@@ -29,7 +29,7 @@
     </div>
     <div class="grid">
         <div class="card">
-            <div class="card_img"><img src="/img/mobile.jpg" alt="" width="320px"></div>
+            <div class="card_img"><img src="img/mobile.jpg" alt="" width="320px"></div>
             <div class="card_text">
                 <h3>App Development</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam voluptates perferendis at placeat debitis laboriosam quibusdam exercitationem minima minus magni.</p>
@@ -38,7 +38,7 @@
     </div>
     <div class="grid">
         <div class="card">
-            <div class="card_img"><img src="/img/uiux.jpg" alt="" width="320px">
+            <div class="card_img"><img src="img/uiux.jpg" alt="" width="320px">
             </div>
             <div class="card_text">
                 <h3>UI/UX Design</h3>
